--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3000
-MONGO_URI=mongodb://localhost:27017/ecotrack
+MONGO_URI=mongodb+srv://gsufficient46_db_user:d4P7J8CLB2cjfDSo@vusinwedi01.zajp0du.mongodb.net/ecotrack?retryWrites=true&w=majority&appName=VusiNwedi01
 JWT_SECRET=eco_track_super_secret_key_2026
