--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongodb": "^7.0.0",
-    "mongoose": "^9.1.5"
+    "mongoose": "^9.1.5",
+    "socket": "^1.1.62",
+    "socket.io": "^4.8.3"
   }
 }
